# tree-sitter-microscript

./: .gitignore  AGENTS.md  Cargo.toml  MANIFEST.in  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-microscript.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_microscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMicroscript/: microscript.h
queries/: brackets.scm  highlights.scm  indents.scm  injections.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: async.txt  basic.txt  classes.txt  control_flow.txt  expressions.txt  functions.txt
